документация для страниц с апи, ентити, ендпоинтами и к тестам

--- a/ApiEasier.Frontend/documentation/coverage.html
+++ b/ApiEasier.Frontend/documentation/coverage.html
@@ -334,52 +334,52 @@
                 <span class="coverage-count">(7/7)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ApiEndpointListComponent.html">src/app/data/pages/api-endpoint-list/api-endpoint-list.component.ts</a>
             </td>
             <td>component</td>
             <td>ApiEndpointListComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/19)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(19/19)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/CardApiListComponent.html">src/app/data/pages/card-api-list/card-api-list.component.ts</a>
             </td>
             <td>component</td>
             <td>CardApiListComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/46)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(45/45)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
-                <a href="./components/EndpointCardListComponent.html">src/app/data/pages/endpoints-page/endpoin-card-list/endpoint-card-list.component.ts</a>
+                <a href="./components/EndpointCardListComponent.html">src/app/data/pages/endpoint-card-list/endpoint-card-list.component.ts</a>
             </td>
             <td>component</td>
             <td>EndpointCardListComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/24)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(24/24)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/EntityCardListComponent.html">src/app/data/pages/entity-card-list/entity-card-list.component.ts</a>
             </td>
             <td>component</td>
             <td>EntityCardListComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/34)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(34/34)</span>
             </td>
         </tr>
         <tr class="low">
