--- a/ApiEasier.Frontend/documentation/coverage.html
+++ b/ApiEasier.Frontend/documentation/coverage.html
@@ -382,28 +382,28 @@
                 <span class="coverage-count">(34/34)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/ErrorDisplayComponent.html">src/app/data/pages/error-display/error-display.component.ts</a>
             </td>
             <td>component</td>
             <td>ErrorDisplayComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(6/6)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/PageNotFoundComponent.html">src/app/data/pages/page-not-found/page-not-found.component.ts</a>
             </td>
             <td>component</td>
             <td>PageNotFoundComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/2)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
         <tr class="low">
