--- a/ApiEasier.Frontend/documentation/interfaces/ApiServiceStructure.html
+++ b/ApiEasier.Frontend/documentation/interfaces/ApiServiceStructure.html
@@ -126,6 +126,14 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Интерфейс, представляющий полную структуру API сервиса.</p>
+<p>Этот интерфейс расширяет <code>apiServiceShortStructure</code>, добавляя массив сущностей.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -206,6 +214,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Описание сервиса.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -239,6 +253,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Массив сущностей, связанных с сервисом.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -260,6 +280,12 @@
                                     </td>
                                 </tr>
 
+                                <tr>
+                                    <td class="col-md-4">
+                                        <i>Default value : </i><code>false
+</code>
+                                    </td>
+                                </tr>
 
                                     <tr>
                                         <td class="col-md-4">
@@ -272,6 +298,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Флаг активности сервиса.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -305,6 +337,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Название сервиса.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
             </section>
@@ -314,11 +352,40 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Entity } from &quot;./Entity&quot;;
 
-
+/**
+ * Интерфейс, представляющий полную структуру API сервиса.
+ *
+ * @remarks
+ * Этот интерфейс расширяет &#x60;apiServiceShortStructure&#x60;, добавляя массив сущностей.
+ *
+ * @type {{ name: string, isActive: boolean, description: string, entities: Entity[] }}
+ * @default { name: &#x27;&#x27;, isActive: false, description: &#x27;&#x27;, entities: [] }
+ * @memberof Component
+ */
 export interface ApiServiceStructure {
+  /**
+   * Название сервиса.
+   * @type {string}
+   */
   name: string;
+
+  /**
+   * Флаг активности сервиса.
+   * @type {boolean}
+   * @default false
+   */
   isActive: boolean;
+
+  /**
+   * Описание сервиса.
+   * @type {string}
+   */
   description: string;
+
+  /**
+   * Массив сущностей, связанных с сервисом.
+   * @type {Entity[]}
+   */
   entities: Entity[];
 }
 </code></pre>
