--- a/ApiEasier.Frontend/documentation/interfaces/EntityShort.html
+++ b/ApiEasier.Frontend/documentation/interfaces/EntityShort.html
@@ -126,6 +126,14 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Интерфейс, представляющий краткую информацию о сущности.</p>
+<p>Этот интерфейс используется для описания основных характеристик сущности.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -188,6 +196,12 @@
                                     </td>
                                 </tr>
 
+                                <tr>
+                                    <td class="col-md-4">
+                                        <i>Default value : </i><code>false
+</code>
+                                    </td>
+                                </tr>
 
                                     <tr>
                                         <td class="col-md-4">
@@ -200,6 +214,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Флаг активности сущности.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -233,6 +253,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Название сущности.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -266,6 +292,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Структура сущности в виде строки.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
             </section>
@@ -274,8 +306,23 @@
 
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface EntityShort {
+  /**
+   * Название сущности.
+   * @type {string}
+   */
   name: string;
+
+  /**
+   * Флаг активности сущности.
+   * @type {boolean}
+   * @default false
+   */
   isActive: boolean;
+
+  /**
+   * Структура сущности в виде строки.
+   * @type {string}
+   */
   structure: string;
 }
 </code></pre>
