--- a/ApiEasier.Frontend/documentation/interfaces/apiServiceShortStructure.html
+++ b/ApiEasier.Frontend/documentation/interfaces/apiServiceShortStructure.html
@@ -126,6 +126,15 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Интерфейс, представляющий краткую структуру API сервиса.</p>
+<p>Этот интерфейс используется для описания основных характеристик API сервиса.
+Он включает в себя имя сервиса, его статус активности и краткое описание.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -200,6 +209,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Описание сервиса.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -221,6 +236,12 @@
                                     </td>
                                 </tr>
 
+                                <tr>
+                                    <td class="col-md-4">
+                                        <i>Default value : </i><code>false
+</code>
+                                    </td>
+                                </tr>
 
                                     <tr>
                                         <td class="col-md-4">
@@ -233,6 +254,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Флаг активности сервиса.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-sm table-bordered">
@@ -266,6 +293,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Название сервиса.</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
             </section>
@@ -274,8 +307,23 @@
 
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface apiServiceShortStructure {
+  /**
+   * Название сервиса.
+   * @type {string}
+   */
   name: string;
+
+  /**
+   * Флаг активности сервиса.
+   * @type {boolean}
+   * @default false
+   */
   isActive: boolean;
+
+  /**
+   * Описание сервиса.
+   * @type {string}
+   */
   description: string;
 }
 </code></pre>
