--- a/ApiEasier.Frontend/documentation/injectables/ApiHubServiceService.html
+++ b/ApiEasier.Frontend/documentation/injectables/ApiHubServiceService.html
@@ -119,6 +119,15 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Сервис для взаимодействия с SignalR хабом для управления API сервисами.</p>
+<p>Этот сервис управляет подключением к SignalR хабу и обрабатывает события, связанные с API сервисами.
+Он использует BehaviorSubject для управления состоянием списка API сервисов.</p>
+
+            </p>
 
 
 
@@ -187,7 +196,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/services/api-hub-service.service.ts:13</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/services/api-hub-service.service.ts:30</a></div>
                             </td>
                         </tr>
 
@@ -220,14 +229,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="67"
-                                    class="link-to-prism">src/app/services/api-hub-service.service.ts:67</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="128"
+                                    class="link-to-prism">src/app/services/api-hub-service.service.ts:128</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Инициализирует данные списка API сервисов.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -238,6 +249,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -252,6 +264,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>Начальные данные списка API сервисов.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -292,7 +310,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/services/api-hub-service.service.ts:11</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/services/api-hub-service.service.ts:21</a></div>
                         </td>
                     </tr>
 
@@ -318,7 +336,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/services/api-hub-service.service.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/services/api-hub-service.service.ts:22</a></div>
                         </td>
                     </tr>
 
@@ -345,7 +363,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/services/api-hub-service.service.ts:10</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/services/api-hub-service.service.ts:20</a></div>
                         </td>
                     </tr>
 
@@ -376,10 +394,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/services/api-hub-service.service.ts:13</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/app/services/api-hub-service.service.ts:30</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Наблюдаемый объект, содержащий обновленный список API сервисов.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -394,6 +418,16 @@ import * as signalR from &#x27;@microsoft/signalr&#x27;;
 import { BehaviorSubject, Observable, Subject } from &#x27;rxjs&#x27;;
 import { apiServiceShortStructure } from &quot;../interfaces/apiServiceShortStructure&quot;;
 
+/**
+ * Сервис для взаимодействия с SignalR хабом для управления API сервисами.
+ *
+ * @remarks
+ * Этот сервис управляет подключением к SignalR хабу и обрабатывает события, связанные с API сервисами.
+ * Он использует BehaviorSubject для управления состоянием списка API сервисов.
+ *
+ * @type {ApiHubServiceService}
+ * @memberof Component
+ */
 @Injectable({
   providedIn: &#x27;root&#x27;
 })
@@ -401,7 +435,15 @@ export class ApiHubServiceService {
   private hubConnection!: signalR.HubConnection;
   private apiListSubject &#x3D; new BehaviorSubject&lt;apiServiceShortStructure[]&gt;([]);
   private baseUrl &#x3D; &#x60;${window.location.origin}/hubs&#x60;;
+
+  /**
+   * Наблюдаемый объект, содержащий обновленный список API сервисов.
+   *
+   * @type {Observable&lt;apiServiceShortStructure[]&gt;}
+   * @memberof ApiHubServiceService
+   */
   ordersUpdated$: Observable&lt;apiServiceShortStructure[]&gt; &#x3D; this.apiListSubject.asObservable();
+
   constructor() {
     this.hubConnection &#x3D; new signalR.HubConnectionBuilder()
       .withUrl(&#x60;hubs/apilisthub&#x60;, {
@@ -416,18 +458,40 @@ export class ApiHubServiceService {
       .then(() &#x3D;&gt; console.log(&#x27;Connected to SignalR hub&#x27;))
       .catch(err &#x3D;&gt; console.error(&#x27;Error connecting to SignalR hub:&#x27;, err));
 
+    /**
+     * Обработчик события получения списка API сервисов.
+     *
+     * @param {apiServiceShortStructure[]} apiList - Список API сервисов.
+     * @listens RecieveMessage
+     * @memberof ApiHubServiceService
+     */
     this.hubConnection.on(&#x27;RecieveMessage&#x27;, (apiList: apiServiceShortStructure[]) &#x3D;&gt; {
       this.apiListSubject.next(apiList);
       console.log(apiList);
     });
 
+    /**
+     * Обработчик события добавления нового API сервиса.
+     *
+     * @param {apiServiceShortStructure} api - Новый API сервис.
+     * @listens AddService
+     * @memberof ApiHubServiceService
+     */
     this.hubConnection.on(&#x27;AddService&#x27;, (api: apiServiceShortStructure) &#x3D;&gt; {
       const currentList &#x3D; this.apiListSubject.getValue();
       currentList.push(api);
       this.apiListSubject.next(currentList);
       console.log(currentList);
     });
-    
+
+    /**
+     * Обработчик события обновления существующего API сервиса.
+     *
+     * @param {string} oldName - Старое имя API сервиса.
+     * @param {apiServiceShortStructure} api - Обновленный API сервис.
+     * @listens UpdateService
+     * @memberof ApiHubServiceService
+     */
     this.hubConnection.on(&#x27;UpdateService&#x27;, (oldName: string, api: apiServiceShortStructure) &#x3D;&gt; {
       const currentList &#x3D; this.apiListSubject.getValue();
       const index &#x3D; currentList.findIndex((apiService: apiServiceShortStructure) &#x3D;&gt; {
@@ -436,7 +500,14 @@ export class ApiHubServiceService {
       currentList[index] &#x3D; api;
       this.apiListSubject.next(currentList);
     });
-    
+
+    /**
+     * Обработчик события удаления API сервиса.
+     *
+     * @param {string} name - Имя удаляемого API сервиса.
+     * @listens RemoveService
+     * @memberof ApiHubServiceService
+     */
     this.hubConnection.on(&#x27;RemoveService&#x27;, (name: string) &#x3D;&gt; {
       const currentList &#x3D; this.apiListSubject.getValue();
       const index &#x3D; currentList.findIndex((apiService: apiServiceShortStructure) &#x3D;&gt; {
@@ -446,15 +517,29 @@ export class ApiHubServiceService {
       this.apiListSubject.next(currentList);
     });
 
+    /**
+     * Обработчик события обновления статуса активности API сервиса.
+     *
+     * @param {string} name - Имя API сервиса.
+     * @param {boolean} isActive - Новый статус активности.
+     * @listens UpdateStatusService
+     * @memberof ApiHubServiceService
+     */
     this.hubConnection.on(&#x27;UpdateStatusService&#x27;, (name: string, isActive: boolean) &#x3D;&gt; {
       this.apiListSubject.next(
-        this.apiListSubject.getValue().map(apiService &#x3D;&gt; 
+        this.apiListSubject.getValue().map(apiService &#x3D;&gt;
           apiService.name &#x3D;&#x3D;&#x3D; name ? { ...apiService, isActive } : apiService
         )
       );
     });
   }
-  
+
+  /**
+   * Инициализирует данные списка API сервисов.
+   *
+   * @param {apiServiceShortStructure[]} initialData - Начальные данные списка API сервисов.
+   * @memberof ApiHubServiceService
+   */
   initializeData(initialData: apiServiceShortStructure[]) {
     this.apiListSubject.next(initialData);
   }
