--- a/ApiEasier.Frontend/src/index.html
+++ b/ApiEasier.Frontend/src/index.html
@@ -5,7 +5,7 @@
   <title>ApiEasier</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="public/apiEasierFavicon.ico">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 <body>
