--- a/ApiEasier.Frontend/documentation/interceptors/HttpErrorInterceptor.html
+++ b/ApiEasier.Frontend/documentation/interceptors/HttpErrorInterceptor.html
@@ -412,8 +412,7 @@ export class HttpErrorInterceptor implements HttpInterceptor {
       })
     );
   }
-}
-</code></pre>
+}</code></pre>
     </div>
 </div>
 
