--- a/ApiEasier.Frontend/documentation/injectables/EntityService.html
+++ b/ApiEasier.Frontend/documentation/injectables/EntityService.html
@@ -203,19 +203,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/services/entity-service.service.ts:24</a></div>
-=======
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/services/entity-service.service.ts:16</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/services/entity-service.service.ts:24</a></div>
->>>>>>> c1b38d2 (документация)
-=======
                                 <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/services/entity-service.service.ts:21</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
                             </td>
                         </tr>
 
@@ -278,23 +266,8 @@
 
                     <tr>
                         <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div class="io-line">Defined in <a href="" data-line="67"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:67</a></div>
-=======
-                            <div class="io-line">Defined in <a href="" data-line="36"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:36</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="67"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:67</a></div>
->>>>>>> c1b38d2 (документация)
-=======
                             <div class="io-line">Defined in <a href="" data-line="60"
                                     class="link-to-prism">src/app/services/entity-service.service.ts:60</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
                         </td>
                     </tr>
 
@@ -388,23 +361,8 @@
 
                     <tr>
                         <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div class="io-line">Defined in <a href="" data-line="103"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:103</a></div>
-=======
-                            <div class="io-line">Defined in <a href="" data-line="55"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:55</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="103"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:103</a></div>
->>>>>>> c1b38d2 (документация)
-=======
                             <div class="io-line">Defined in <a href="" data-line="95"
                                     class="link-to-prism">src/app/services/entity-service.service.ts:95</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
                         </td>
                     </tr>
 
@@ -498,34 +456,25 @@
 
                     <tr>
                         <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div class="io-line">Defined in <a href="" data-line="140"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:140</a></div>
-=======
-                            <div class="io-line">Defined in <a href="" data-line="77"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:77</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="140"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:140</a></div>
->>>>>>> c1b38d2 (документация)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="125"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:125</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
+                            <div class="io-line">Defined in <a href="" data-line="130"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:130</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Получает список всех API сервисов.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="../interfaces/apiServiceShortStructure.html" target="_self" >Observable&lt;apiServiceShortStructure[]&gt;</a></code>
 
                         </div>
+                            <div class="io-description">
+                                <p>Наблюдаемый объект, содержащий список API сервисов.</p>
+
+                            </div>
                 </td>
             </tr>
         </tbody>
@@ -550,23 +499,8 @@
 
                     <tr>
                         <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div class="io-line">Defined in <a href="" data-line="53"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:53</a></div>
-=======
-                            <div class="io-line">Defined in <a href="" data-line="30"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:30</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="53"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:53</a></div>
->>>>>>> c1b38d2 (документация)
-=======
                             <div class="io-line">Defined in <a href="" data-line="46"
                                     class="link-to-prism">src/app/services/entity-service.service.ts:46</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
                         </td>
                     </tr>
 
@@ -660,23 +594,8 @@
 
                     <tr>
                         <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div class="io-line">Defined in <a href="" data-line="39"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:39</a></div>
-=======
-                            <div class="io-line">Defined in <a href="" data-line="24"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:24</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="39"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:39</a></div>
->>>>>>> c1b38d2 (документация)
-=======
                             <div class="io-line">Defined in <a href="" data-line="32"
                                     class="link-to-prism">src/app/services/entity-service.service.ts:32</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
                         </td>
                     </tr>
 
@@ -736,98 +655,6 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-<<<<<<< HEAD
-                    <a name="handleError"></a>
-                    <span class="name">
-                            <span class="modifier">Private</span>
-                        <span ><b>handleError</b></span>
-                        <a href="#handleError"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-                        <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>handleError(error: HttpErrorResponse)</code>
-                </td>
-            </tr>
-
-
-                    <tr>
-                        <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div class="io-line">Defined in <a href="" data-line="154"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:154</a></div>
-=======
-                            <div class="io-line">Defined in <a href="" data-line="83"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:83</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="154"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:154</a></div>
->>>>>>> c1b38d2 (документация)
-                        </td>
-                    </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                        <div class="io-description"><p>Обрабатывает ошибки HTTP-запросов.</p>
-</div>
-
-                            <div class="io-description">
-                                <b>Parameters :</b>
-                                
-                                <table class="params">
-                                    <thead>
-                                        <tr>
-                                            <td>Name</td>
-                                                <td>Type</td>
-                                            <td>Optional</td>
-                                                <td>Description</td>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                                <td>error</td>
-                                            <td>
-                                                        <code>HttpErrorResponse</code>
-                                            </td>
-
-                                            <td>
-                                                    No
-                                            </td>
-
-
-                                            <td>
-                                                    <ul>
-<li>Объект ошибки HTTP.</li>
-</ul>
-
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        <div class="io-description">
-                            <b>Returns : </b>    <code>Observable&lt;never&gt;</code>
-
-                        </div>
-                            <div class="io-description">
-                                <p>Наблюдаемый объект, указывающий на ошибку.</p>
-
-                            </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-=======
->>>>>>> f12d8b4 (вкусно и точка.)
                     <a name="updateApiEntity"></a>
                     <span class="name">
                         <span ><b>updateApiEntity</b></span>
@@ -844,23 +671,8 @@
 
                     <tr>
                         <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div class="io-line">Defined in <a href="" data-line="82"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:82</a></div>
-=======
-                            <div class="io-line">Defined in <a href="" data-line="42"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:42</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="82"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:82</a></div>
->>>>>>> c1b38d2 (документация)
-=======
                             <div class="io-line">Defined in <a href="" data-line="76"
                                     class="link-to-prism">src/app/services/entity-service.service.ts:76</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
                         </td>
                     </tr>
 
@@ -972,23 +784,8 @@
 
                     <tr>
                         <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                            <div class="io-line">Defined in <a href="" data-line="121"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:121</a></div>
-=======
-                            <div class="io-line">Defined in <a href="" data-line="64"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:64</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                            <div class="io-line">Defined in <a href="" data-line="121"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:121</a></div>
->>>>>>> c1b38d2 (документация)
-=======
                             <div class="io-line">Defined in <a href="" data-line="113"
                                     class="link-to-prism">src/app/services/entity-service.service.ts:113</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
                         </td>
                     </tr>
 
@@ -1105,19 +902,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/services/entity-service.service.ts:24</a></div>
-=======
-                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/services/entity-service.service.ts:16</a></div>
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/services/entity-service.service.ts:24</a></div>
->>>>>>> c1b38d2 (документация)
-=======
                                 <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/services/entity-service.service.ts:21</a></div>
->>>>>>> f12d8b4 (вкусно и точка.)
                         </td>
                     </tr>
 
@@ -1130,32 +915,11 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-<<<<<<< HEAD
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { HttpClient, HttpErrorResponse } from &#x27;@angular/common/http&#x27;;
-import { Injectable } from &#x27;@angular/core&#x27;;
-import { Observable, throwError } from &#x27;rxjs&#x27;;
-import { catchError } from &#x27;rxjs/operators&#x27;;
-<<<<<<< HEAD
-<<<<<<< HEAD
-import { Entity } from &quot;../interfaces/Entity&quot;;
-=======
-import { Router } from &#x27;@angular/router&#x27;;
-import { Entity } from &quot;../interfaces/Entity&quot;;
-import { ApiServiceStructure } from &quot;../interfaces/ApiServiceStructure&quot;;
->>>>>>> 0eb3894 (добавлена документация к обычным компонентам)
-=======
-import { Entity } from &quot;../interfaces/Entity&quot;;
->>>>>>> c1b38d2 (документация)
-import { apiServiceShortStructure } from &quot;../interfaces/apiServiceShortStructure&quot;;
-import { TuiAlertService } from &#x27;@taiga-ui/core&#x27;;
-import { ErrorHandlerService } from &#x27;./error-handler.service&#x27;;
-=======
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable } from &#x27;@angular/core&#x27;;
-import { HttpClient, HttpErrorResponse } from &#x27;@angular/common/http&#x27;;
+import { HttpClient } from &#x27;@angular/common/http&#x27;;
 import { Observable } from &#x27;rxjs&#x27;;
 import { Entity } from &#x27;../interfaces/Entity&#x27;;
 import { apiServiceShortStructure } from &#x27;../interfaces/apiServiceShortStructure&#x27;;
->>>>>>> f12d8b4 (вкусно и точка.)
 
 /**
  * Сервис для управления сущностями API.
@@ -1274,7 +1038,12 @@ export class EntityService {
     );
   }
 
-
+  /**
+   * Получает список всех API сервисов.
+   *
+   * @returns {Observable&lt;apiServiceShortStructure[]&gt;} Наблюдаемый объект, содержащий список API сервисов.
+   * @memberof EntityService
+   */
   getAllApiServices(): Observable&lt;apiServiceShortStructure[]&gt; {
     return this.http.get&lt;apiServiceShortStructure[]&gt;(
       &#x60;${this.baseUrl}/ApiServices&#x60;
